k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacecraft-telemetry-deployment
  namespace: spacecraft-telemetry
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: spacecraft-telemetry
  template:
    metadata:
      labels:
        app: spacecraft-telemetry
    spec:
      containers:
        - name: spacecraft-telemetry-backend
          image: 571252911393.dkr.ecr.us-east-1.amazonaws.com/spacecraft-telemetry-dev:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
