k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacecraft-telemetry-ingress
  namespace: spacecraft-telemetry
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing       # public (not internal)
    alb.ingress.kubernetes.io/target-type: ip               # route to pod IPs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: ACM_CERTIFICATE_ARN_PLACEHOLDER
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spacecraft-telemetry-service
                port:
                  number: 8000
